unpackaged/main/default/objects/SBQQ__ProcessInputCondition__c/fields/SBQQ__MasterProcessInput__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__MasterProcessInput__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Values of this process input will determine the visibility of the current input.</description>
    <inlineHelpText>Les valeurs de cette entrée de processus déterminent la visibilité de l&#39;entrée actuelle.</inlineHelpText>
    <label>Master Process Input</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.SBQQ__ProcessInput__c</field>
            <operation>equals</operation>
            <valueField>$Source.SBQQ__ProcessInput__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SBQQ__ProcessInput__c</referenceTo>
    <relationshipLabel>Process Inputs Regulated</relationshipLabel>
    <relationshipName>DependentInputs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>